[package]
name = "nquinn"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
license = "MIT OR Apache-2.0"

[dependencies]
quinn-proto = { version = "0.9.2", default-features = false, features = [] }
snow = { version = "0.9", features = ["risky-raw-split"] }
hkdf = { version = "0.12" }
sha2 = { version = "0.10" }
aes = { version = "0.8" }
bytes = "1.4.0"
rand = "0.8.5"
aes-gcm = "0.9"

[dev-dependencies]
quinn = { version = "0.9.3", default-features = false, features = ["runtime-tokio"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
hex = "0.4.3"

